@@ -1,0 +1,5 @@
+        no signature: 0
+    trivial coercion: 0
+     prefix coercion: 0
+ reordering coercion: 0
+             outputs: 0123478
